<resources>
    <string name="app_name">FindMe</string>
    <string name="authorization">Авторизация</string>
    <string name="make_auth">Авторизоваться</string>
    <string name="registration">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="email_hint">Введите Email</string>
    <string name="password_hint">Введите пароль</string>
    <string name="empty_email_error">Введите корректный Email</string>
    <string name="empty_password_error">Введите пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="confirm_password_hint">Введите подтверждение пароля</string>
    <string name="make_registration">Зарегистрироваться</string>
    <string name="build_route">Построить маршрут</string>
    <string name="add_route">Добавить маршрут</string>
    <string name="attributes_list">Список препятствий</string>
    <string name="add_attribute">Добавить препятствие</string>
    <string name="edit_barrier">Редактировать препятствие</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="registration_success">Регистрация прошла успешно</string>
    <string name="email_already_exist">Пользователь с таким Email уже существует</string>
    <string name="validation_error">Введены некорректные данные</string>
    <string name="email_validation_error">Введите корректный Email</string>
    <string name="password_empty_error">Введите пароль</string>
    <string name="password_length_error">Длина пароля должна быть не менее 5 символов</string>
    <string name="confirm_password_empty_error">Введите подтверждение пароля</string>
    <string name="password_confirm_different">Пароль и подтверждение не совпадают</string>
    <string name="default_error_message">Произошла неизвестная ошибка</string>
    <string name="user_not_found">Пользователь с таким Email не зарегистрирован</string>
    <string name="current_location">Текущее местоположение</string>
    <string name="start_point">Начальная точка</string>
    <string name="end_point">Конечная точка</string>
    <string name="from_current_location">От текущего местоположения</string>
    <string name="from_selected_dot">Между двумя точками</string>
    <string name="distance_template_meters">Длина маршрута %.0f м.</string>
    <string name="distance_template_kilo_meters">Длинна маршрута %.3f км.</string>
    <string name="point_attributes">Локальные препятствия</string>
    <string name="long_attributes">Протяженные препятствия</string>
    <string name="category">Категория</string>
    <string name="comment">Комментарий</string>
    <string name="radius">Радиус</string>
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота</string>
    <string name="length">Длинна</string>
    <string name="point_attribute">Локальное препятствие</string>
    <string name="long_attribute">Протяженное препятствие</string>
    <string name="about_time_minutes">Приблизительное время %.2f мин.</string>
    <string name="write_comment_hint">Напишите комментарий</string>
    <string name="selected_dot_on_map">Выберите точку на карте</string>
    <string name="write_comment">Напишите комментарий</string>
    <string name="attribute_added">Перпятствие успешно зафиксировано</string>
    <string name="attributes_empty">Список препятствий пуст</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="points_size_error">Выберите как минимум две точки</string>
    <string name="length_template_meters">Длина: %.0f м.</string>
    <string name="length_template_kilo_meters">Длинна: %.3f км.</string>
    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
    <string name="save_route">Сохранить маршрут</string>

</resources>
