<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.auth.AuthFragment">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="@dimen/default_side_margin"
            app:srcCompat="@drawable/ic_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_side_margin"
            android:text="@string/registration"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="48dp"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:hint="@string/email_hint"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="24dp"
            android:text="@string/confirm_password"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnRegistration"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="@dimen/default_side_margin"
            android:text="@string/make_registration" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        style="@style/LoadingProgressBar" />

</FrameLayout>