<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.ui.menu.attribute.add.point.AddPointAttributeFragment">

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/llAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvCategory"
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/spCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin" />

        <TextView
            android:id="@+id/tvRadius"
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:text="@string/radius" />

        <SeekBar
            android:id="@+id/sbRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/default_side_margin" />

        <TextView
            android:id="@+id/tvComment"
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:text="@string/comment" />


    </LinearLayout>

</LinearLayout>